@@ -1343,4 +1343,6 @@
 ===============================================================================
 01 Sep 97: Released TclX 8.0.0 Beta 3
 ===============================================================================
-
+24 Sep 97:
+  o Fixed bug with backslash parsing in lgets.
+-------------------------------------------------------------------------------
